# finanzas-prueba

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  DOCUMENTACION_SISTEMA.md  Dockerfile  INICIO_PROYECTO.md  finanzas.db  fly.toml  generate_docs.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
.github/workflows/: deploy.yml
attached_assets/: Pasted--OBJETIVO-DEL-SISTEMA-Desarrollar-una-aplicaci-n-comple_1764891982371.txt  Pasted--PROJECT-DOCUMENTATION-English-Version-Optimized-for-AI_1764913005597.txt  Pasted-1-DESCRIPCI-N-GENERAL-Finanzas-Rinc-n-Integral-es-un-si_1766170513600.txt  Pasted-1-DESCRIPCI-N-GENERAL-Finanzas-Rinc-n-Integral-es-un-si_1766170586806.txt  Pasted-Est-s-usando-entity-id-antes-de-que-exista-Ejemplo-esto_1770187161920.txt  Pasted-Estoy-desarrollando-un-POS-para-una-tienda-naturista-co_1770232094742.txt  Pasted-Estoy-desarrollando-un-sistema-POS-con-FastAPI-SQLAlche_1770199314347.txt  Pasted-Quiero-que-crees-una-aplicaci-n-de-escritorio-para-Windows-luego-debe-poder-compilarse-como-exe-c-1764651723917_1764651723918.txt
backend/: main.py
backend/api/: routes.py  schemas.py
backend/models/: __init__.py  database.py  models.py
backend/services/: alerts.py  auth.py  backup_service.py  config.py  export.py  logging_service.py  security.py
backend/utils/: backup.py
client/: index.html
client/src/: App.tsx  index.css
python_src/: README.txt  compilar.bat  main.py
python_src/database/: db.py
python_src/ui/: login.py  main_window.py
script/: start.sh
server/: index.ts  routes.ts
(+21 files in other folders)
