[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.123.9",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "reportlab>=4.4.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
